frontend/srcs/components/AuthComponents/SignInOptions/SignInOptions.css
:root {
  --1-themes-fill-tertiary: rgba(118, 118, 128, 0.12);
  --1-themes-label-primary: rgba(0, 0, 0, 1);
  --1-themes-label-secondary: rgba(60, 60, 67, 0.6);
  --1-themes-system-green: rgba(49, 200, 89, 1);
  --1-themes-system-grey: rgba(142, 142, 147, 1);
  --1-themes-system-grey3: rgba(199, 199, 204, 1);
  --1-themes-system-grey4: rgba(210, 210, 215, 1);
  --1-themes-system-orange: rgba(255, 150, 0, 1);
  --1-themes-system-red: rgba(255, 56, 43, 1);
  --1-themes-system-white: rgba(255, 255, 255, 1);
  --1-themes-system-yellow: rgba(255, 205, 0, 1);
  --dark-colortext-content: rgba(236, 236, 236, 1);
  --neutral-colors500: rgba(224, 224, 233, 1);
  --neutral-colorswhite: rgba(255, 255, 255, 1);
  --primitives-color-purple-5f21cc: rgba(95, 33, 204, 1);
}

[data-1-themes-mode="light"] {
  --1-themes-fill-tertiary: rgba(118, 118, 128, 0.12);
  --1-themes-label-primary: rgba(0, 0, 0, 1);
  --1-themes-label-secondary: rgba(60, 60, 67, 0.6);
  --1-themes-system-green: rgba(49, 200, 89, 1);
  --1-themes-system-grey3: rgba(199, 199, 204, 1);
  --1-themes-system-grey4: rgba(210, 210, 215, 1);
  --1-themes-system-orange: rgba(255, 150, 0, 1);
  --1-themes-system-red: rgba(255, 56, 43, 1);
  --1-themes-system-yellow: rgba(255, 205, 0, 1);
}

[data-1-themes-mode="dark"] {
  --1-themes-fill-tertiary: rgba(118, 118, 128, 0.24);
  --1-themes-label-primary: rgba(255, 255, 255, 1);
  --1-themes-label-secondary: rgba(235, 235, 245, 0.6);
  --1-themes-system-green: rgba(45, 210, 87, 1);
  --1-themes-system-grey3: rgba(70, 70, 73, 1);
  --1-themes-system-grey4: rgba(55, 55, 57, 1);
  --1-themes-system-orange: rgba(255, 159, 3, 1);
  --1-themes-system-red: rgba(254, 67, 54, 1);
  --1-themes-system-yellow: rgba(254, 215, 2, 1);
}

.SignInOptions {
  margin-top: 20px;

  padding: 40px 0px 30px 50px;
  background-color: rgb(0, 0, 0);
  border: 0.5px solid #ffffff;

  max-width: 460px;
  max-height: 512px;
  overflow: hidden;
}

@layer Title {
  .title {
    height: 76px;
    position: relative;
    width: 243px;
  }

  .title .group {
    height: 38px;
    left: 0;
    position: absolute;
    top: 0;
    width: 243px;
  }

  .title .div-wrapper {
    height: 38px;
    position: relative;
    width: 245px;
  }

  .title .text-wrapper {
    color: var(--dark-colortext-content);
    font-family: "Montserrat-Bold", Helvetica;
    font-size: 28.9px;
    font-weight: 700;
    left: 0;
    letter-spacing: 0;
    line-height: 37.4px;
    position: absolute;
    top: 0;
    white-space: nowrap;
  }

  .title .group-wrapper {
    height: 26px;
    left: 0;
    position: absolute;
    top: 50px;
    width: 110px;
  }

  .title .div {
    height: 26px;
    position: relative;
    width: 112px;
  }

  .title .text-wrapper-2 {
    color: var(--dark-colortext-content);
    font-family: "Montserrat-Bold", Helvetica;
    font-size: 19.9px;
    font-weight: 700;
    left: 0;
    letter-spacing: 0;
    line-height: 25.7px;
    position: absolute;
    top: 0;
    white-space: nowrap;
  }
}

@layer Platforme {
  .sign-in-platforme {
    margin-top: 20px;
    height: 139px;
    position: relative;
    width: 310px;
  }

  .sign-in-platforme > div {
    margin-bottom: 10px;
  }

  .sign-in-platforme .apple,
  .sign-in-platforme .google,
  .sign-in-platforme .element-intra {
    background-color: var(--neutral-colorswhite);
    border: 0.91px solid;
    border-color: var(--neutral-colors500);
    border-radius: 45.73px;
    box-shadow: 0px 16.46px 27.44px #8277c51c;
    height: 41px;
    position: relative;
    width: 22rem;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .sign-in-platforme .apple:hover,
  .sign-in-platforme .google:hover,
  .sign-in-platforme .element-intra:hover {
    background-color: #cccccc;
    border: 0.91px solid;
    border-color: var(--neutral-colors500);
    border-radius: 45.73px;
    box-shadow: 0px 16.46px 27.44px #8277c51c;
    height: 41px;
    position: relative;
    width: 22rem;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .sign-in-platforme .img,
  .sign-in-platforme .element {
    height: 16px;
    width: 19px;
    margin-left: 16px;
  }

  .sign-in-platforme .button-content {
    height: 15px;
    width: 18px;
    margin-left: 8px;
  }

  .sign-in-platforme .text-wrapper,
  .sign-in-platforme .div,
  .sign-in-platforme .text-wrapper-2 {
    color: #000000;
    font-family: "Poppins-SemiBold", Helvetica;
    font-size: 12.7px;
    font-weight: 600;
    letter-spacing: 0;
    line-height: 21.2px;
    white-space: nowrap;
    margin-left: 8px; /* Adjust margin-left */
  }
}

@layer OR-line {
  .OR-line {
    margin: 20px 0px 20px 20px;
    height: 1px;
    position: relative;
    width: 308px;
  }

  .OR-line .line {
    height: 1px;
    left: 0;
    position: absolute;
    top: 0;
    width: 134px;
  }

  .OR-line .img {
    height: 1px;
    left: 174px;
    position: absolute;
    top: 0;
    width: 134px;
  }

  .OR-line .left-title {
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 1;
    color: #ffffff;
    display: -webkit-box;
    font-family: "Archivo-Medium", Helvetica;
    font-size: 14.1px;
    font-weight: 500;
    height: 12px;
    left: 147px;
    letter-spacing: -0.23px;
    line-height: 12.4px;
    overflow: hidden;
    position: absolute;
    text-overflow: ellipsis;
    top: -7px;
    white-space: nowrap;
    width: 14px;
  }
}

@layer Signing-Term {
  .title-term {
    height: 63px;
    position: relative;
    width: 216px;
    margin: 10px 0px 10px 20px;
  }

  .title-term .group-term {
    height: 26px;
    left: 0;
    position: absolute;
    top: 36px;
    width: 162px;
  }

  .title-term .div-wrapper-term {
    height: 26px;
    position: relative;
    width: 164px;
  }

  .title-term .text-wrapper-term {
    color: var(--dark-colortext-content);
    font-family: "Montserrat-Bold", Helvetica;
    font-size: 13px;
    font-weight: 900;
    left: 0;
    letter-spacing: 0;
    line-height: 25.8px;
    position: absolute;
    top: 0;
    white-space: nowrap;
  }

  .title-term .by-signing-up-you {
    color: transparent;
    font-family: "Archivo-Medium", Helvetica;
    font-size: 10px;
    font-weight: 500;
    left: 0;
    letter-spacing: -0.23px;
    line-height: 11.3px;
    position: absolute;
    top: -1px;
    width: 216px;
  }

  .title-term .span-term {
    color: #72767a;
    letter-spacing: -0.02px;
  }

  .title-term .text-wrapper-2-term {
    color: #1d9bf0;
    letter-spacing: -0.02px;
  }
}

@media (max-width: 640px) {
  .SignInOptions {
    padding-left: 10px;
    margin-top: 100px;
  }
  .title,
  .sign-in-platforme,
  .buttons-target {
    margin-left: 15px;
  }
  .OR-line {
    margin-left: 36px;
  }
  .title-term {
    margin-left: 30px;
  }
}

